--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -27,9 +27,12 @@
         <item name="android:actionOverflowButtonStyle">@style/overFlowButtonStyle</item>
 z
 
-        <item name="android:listPreferredItemHeightSmall">30dp</item>
-        <item name="android:listPreferredItemPaddingLeft">1dp</item>
-        <item name="android:listPreferredItemHeightLarge">82dp</item>
+        <item name="android:listPreferredItemHeightSmall">50dp</item>
+        <item name="android:listPreferredItemPaddingLeft">5dp</item>
+        <item name="android:listPreferredItemHeight">20dp</item>
+        <item name="android:listPreferredItemHeightLarge">40dp</item>
+
+
 
 
         <!--<item name="actionOverflowMenuStyle">@style/CMOptionsMenu</item>-->
@@ -224,8 +227,8 @@ z
     </style>
 
     <style name="My.Widget.Button.Borderless.Small" parent="@android:style/Widget.Holo.Button.Borderless.Small">
-        <!--<item name="android:minWidth">40dp</item>
-        <item name="android:minHeight">40dp</item>-->
+        <item name="android:minWidth">40dp</item>
+        <item name="android:minHeight">40dp</item>
     </style>
 
     <style name="My.Widget.CompoundButton.CheckBox" parent="@android:style/Widget.Holo.Light.CompoundButton.CheckBox">
@@ -345,7 +348,8 @@ z
 
     <style name="NavigationTheme" parent="My.Theme">
         <item name="fontFamily">@font/gotham_medium</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:paddingVertical">35dp</item>
     </style>
 
     <!--style name="My.Theme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
@@ -403,10 +407,10 @@ z
     </style>
 
     <style name="ListSeparator">
-        <item name="android:alpha">0.25</item>
-        <item name="android:background">@color/gray</item>
+        <item name="android:alpha">1</item>
+        <item name="android:background">@color/vivid_red</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_height">30dp</item>
     </style>
 
     <style name="ExtendedTransactions">
@@ -450,22 +454,9 @@ z
         <item name="android:paddingLeft">24dp</item>
         <item name="android:paddingRight">24dp</item>
         <item name="android:paddingBottom">24dp</item>
-        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingTop">12dp</item>
         <item name="android:orientation">vertical</item>
     </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -526,6 +517,7 @@ z
 
     <style name="My.Widget.PopupMenu" parent="@android:style/Widget.Holo.Light.PopupMenu" >
         <item name="android:layout_width">64dp</item>
+        <item name="android:layout_height">30dp</item>
         <item name="android:width">64dp</item>
     </style>
 
